--- a/WindowsApp1/WindowsApp1.vbproj
+++ b/WindowsApp1/WindowsApp1.vbproj
@@ -85,6 +85,7 @@
     <Compile Include="Form2.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Usuarios.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
