--- a/WindowsApp1/WindowsApp1.vbproj
+++ b/WindowsApp1/WindowsApp1.vbproj
@@ -72,20 +72,21 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.vb">
+    <Compile Include="Modulo_Comportamiento_Ventanas.vb" />
+    <Compile Include="Ventana_Login.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.vb">
-      <DependentUpon>Form1.vb</DependentUpon>
+    <Compile Include="Ventana_Login.Designer.vb">
+      <DependentUpon>Ventana_Login.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form2.Designer.vb">
-      <DependentUpon>Form2.vb</DependentUpon>
+    <Compile Include="Ventana_Principal.Designer.vb">
+      <DependentUpon>Ventana_Principal.vb</DependentUpon>
     </Compile>
-    <Compile Include="Form2.vb">
+    <Compile Include="Ventana_Principal.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Usuarios.vb" />
+    <Compile Include="Modulo_Usuarios.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -103,11 +104,11 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.vb</DependentUpon>
+    <EmbeddedResource Include="Ventana_Login.resx">
+      <DependentUpon>Ventana_Login.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form2.resx">
-      <DependentUpon>Form2.vb</DependentUpon>
+    <EmbeddedResource Include="Ventana_Principal.resx">
+      <DependentUpon>Ventana_Principal.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
