--- a/WindowsApp1/ProyectoUTU.vbproj
+++ b/WindowsApp1/ProyectoUTU.vbproj
@@ -76,6 +76,9 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Modulo_Comportamiento_Ventanas.vb" />
+    <Compile Include="Rounded_Button.vb">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Ventana_Login.vb">
       <SubType>Form</SubType>
     </Compile>
