--- a/WindowsApp1/ProyectoUTU.vbproj
+++ b/WindowsApp1/ProyectoUTU.vbproj
@@ -98,6 +98,12 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Validar_Entradas.vb" />
+    <Compile Include="ventana_crear_alumno.Designer.vb">
+      <DependentUpon>ventana_crear_alumno.vb</DependentUpon>
+    </Compile>
+    <Compile Include="ventana_crear_alumno.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Ventana_Login.vb">
       <SubType>Form</SubType>
     </Compile>
@@ -129,6 +135,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="VentanaConfiguracion.resx">
       <DependentUpon>VentanaConfiguracion.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ventana_crear_alumno.resx">
+      <DependentUpon>ventana_crear_alumno.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Ventana_Login.resx">
       <DependentUpon>Ventana_Login.vb</DependentUpon>
