--- a/WindowsApp1/ProyectoUTU.vbproj
+++ b/WindowsApp1/ProyectoUTU.vbproj
@@ -110,6 +110,12 @@
     <Compile Include="Ventanas\ventana_crear_alumno.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Ventanas\ventana_crear_calificaciones.Designer.vb">
+      <DependentUpon>ventana_crear_calificaciones.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Ventanas\ventana_crear_calificaciones.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Ventanas\ventana_crear_docente.Designer.vb">
       <DependentUpon>ventana_crear_docente.vb</DependentUpon>
     </Compile>
@@ -171,6 +177,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Ventanas\ventana_crear_alumno.resx">
       <DependentUpon>ventana_crear_alumno.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Ventanas\ventana_crear_calificaciones.resx">
+      <DependentUpon>ventana_crear_calificaciones.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Ventanas\ventana_crear_docente.resx">
       <DependentUpon>ventana_crear_docente.vb</DependentUpon>
