--- a/WindowsApp1/ProyectoUTU.vbproj
+++ b/WindowsApp1/ProyectoUTU.vbproj
@@ -164,6 +164,12 @@
     <Compile Include="Ventanas\Ventana_Bienvenida.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="ventana_crear_asignatura.Designer.vb">
+      <DependentUpon>ventana_crear_asignatura.vb</DependentUpon>
+    </Compile>
+    <Compile Include="ventana_crear_asignatura.vb">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="controles_personalizados\Persona_Vista.resx">
@@ -204,6 +210,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Ventanas\Ventana_Bienvenida.resx">
       <DependentUpon>Ventana_Bienvenida.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ventana_crear_asignatura.resx">
+      <DependentUpon>ventana_crear_asignatura.vb</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
