--- a/WindowsApp1/ProyectoUTU.vbproj
+++ b/WindowsApp1/ProyectoUTU.vbproj
@@ -97,6 +97,12 @@
     <Compile Include="modulos\Expresiones_Regulares.vb" />
     <Compile Include="modulos\InformixConexion.vb" />
     <Compile Include="modulos\Mensajes_Al_Usuario.vb" />
+    <Compile Include="Ventanas\Ventana_cargando.Designer.vb">
+      <DependentUpon>Ventana_cargando.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Ventanas\Ventana_cargando.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Ventanas\ventana_crear_grupo.Designer.vb">
       <DependentUpon>ventana_crear_grupo.vb</DependentUpon>
     </Compile>
@@ -216,6 +222,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="controles_personalizados\DGVPaginado.resx">
       <DependentUpon>DGVPaginado.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Ventanas\Ventana_cargando.resx">
+      <DependentUpon>Ventana_cargando.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Ventanas\ventana_crear_grupo.resx">
       <DependentUpon>ventana_crear_grupo.vb</DependentUpon>
@@ -450,7 +459,9 @@
   <ItemGroup>
     <None Include="Resources\isologotipo.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Resources\jar-loading.gif" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <ProjectExtensions />
 </Project>
