--- a/WindowsApp1/ProyectoUTU.vbproj
+++ b/WindowsApp1/ProyectoUTU.vbproj
@@ -109,6 +109,12 @@
     <Compile Include="Ventanas\Ventana_cargando.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Ventanas\ventana_crear_admin.Designer.vb">
+      <DependentUpon>ventana_crear_admin.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Ventanas\ventana_crear_admin.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Ventanas\ventana_crear_grupo.Designer.vb">
       <DependentUpon>ventana_crear_grupo.vb</DependentUpon>
     </Compile>
@@ -234,6 +240,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Ventanas\Ventana_cargando.resx">
       <DependentUpon>Ventana_cargando.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Ventanas\ventana_crear_admin.resx">
+      <DependentUpon>ventana_crear_admin.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Ventanas\ventana_crear_grupo.resx">
       <DependentUpon>ventana_crear_grupo.vb</DependentUpon>
