--- a/WindowsApp1/ProyectoUTU.vbproj
+++ b/WindowsApp1/ProyectoUTU.vbproj
@@ -97,6 +97,12 @@
     <Compile Include="modulos\Expresiones_Regulares.vb" />
     <Compile Include="modulos\InformixConexion.vb" />
     <Compile Include="modulos\Mensajes_Al_Usuario.vb" />
+    <Compile Include="Ventanas\Agregar_a_grupo.Designer.vb">
+      <DependentUpon>Agregar_a_grupo.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Ventanas\Agregar_a_grupo.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Ventanas\Invitado.Designer.vb">
       <DependentUpon>Invitado.vb</DependentUpon>
     </Compile>
@@ -234,6 +240,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="controles_personalizados\DGVPaginado.resx">
       <DependentUpon>DGVPaginado.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Ventanas\Agregar_a_grupo.resx">
+      <DependentUpon>Agregar_a_grupo.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Ventanas\Invitado.resx">
       <DependentUpon>Invitado.vb</DependentUpon>
