--- a/WindowsApp1/ProyectoUTU.vbproj
+++ b/WindowsApp1/ProyectoUTU.vbproj
@@ -233,6 +233,12 @@
     <Compile Include="Ventanas\ventana_crear_usuario.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Ventanas\ventana_ver_grupos_docente.Designer.vb">
+      <DependentUpon>ventana_ver_grupos_docente.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Ventanas\ventana_ver_grupos_docente.vb">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="controles_personalizados\Persona_Vista.resx">
@@ -303,6 +309,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Ventanas\ventana_crear_usuario.resx">
       <DependentUpon>ventana_crear_usuario.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Ventanas\ventana_ver_grupos_docente.resx">
+      <DependentUpon>ventana_ver_grupos_docente.vb</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
