--- a/WindowsApp1/ProyectoUTU.vbproj
+++ b/WindowsApp1/ProyectoUTU.vbproj
@@ -122,6 +122,12 @@
     <Compile Include="Ventanas\ventana_crear_admin.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Ventanas\ventana_crear_ciudades.Designer.vb">
+      <DependentUpon>ventana_crear_ciudades.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Ventanas\ventana_crear_ciudades.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Ventanas\ventana_crear_grupo.Designer.vb">
       <DependentUpon>ventana_crear_grupo.vb</DependentUpon>
     </Compile>
@@ -283,6 +289,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Ventanas\ventana_crear_admin.resx">
       <DependentUpon>ventana_crear_admin.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Ventanas\ventana_crear_ciudades.resx">
+      <DependentUpon>ventana_crear_ciudades.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Ventanas\ventana_crear_grupo.resx">
       <DependentUpon>ventana_crear_grupo.vb</DependentUpon>
